<resources>
    <string name="app_name">To Do</string>

    <string name="title">제목</string>
    <string name="memo">메모</string>
    <string name="date">기한</string>
    <string name="cancel">취소</string>
    <string name="ok">완료</string>

    <string name="check_delete">삭제하시겠습니까?</string>
    <string name="check_ok">완료하고 삭제하시겠습니까?</string>

    <string name="is_title">제목을 입력하세요.</string>

    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
</resources>
